--- a/playground/Makefile
+++ b/playground/Makefile
@@ -1,29 +1,35 @@
-# Makefile for Arduino
-
 # Set the Fully Qualified Board Name (FQBN) and serial port
-FQBN = arduino:avr:uno
-MONITOR_PORT = /dev/ttyUSB0
+FQBN = arduino:renesas_uno:minima
+MONITOR_PORT = /dev/ttyACM3  # Change this to the correct port
+BUILD_DIR = build
+
+# Arduino CLI command
+ARDUINO_CLI = arduino-cli
 
 # Default target: compile the Arduino sketch
 all:
-	arduino-cli compile --output-dir=build --fqbn $(FQBN) $(notdir $(CURDIR)).ino
+	$(ARDUINO_CLI) compile --output-dir $(BUILD_DIR) --fqbn $(FQBN) $(CURDIR)/$(notdir $(CURDIR)).ino
 
-# Upload the compiled sketch to the Arduino
+# Upload the compiled sketch to Arduino
 upload:
-	arduino-cli upload --input-dir=build -b $(FQBN) -p $(MONITOR_PORT) $(CURDIR)
+	$(ARDUINO_CLI) upload -p $(MONITOR_PORT) --fqbn $(FQBN) --input-dir $(BUILD_DIR) $(CURDIR)/$(notdir $(CURDIR)).ino -v
 
-# Flash using USBasp programmer
+# Upload using USBasp programmer
 ispload:
-	arduino-cli upload --input-dir=build -b $(FQBN) -P usbasp $(CURDIR)
+	$(ARDUINO_CLI) upload -p $(MONITOR_PORT) -P usbasp --fqbn $(FQBN) --input-dir $(BUILD_DIR) $(CURDIR)/$(notdir $(CURDIR)).ino
 
 # Burn the bootloader using USBasp programmer
 burn_bootloader:
-	arduino-cli burn-bootloader -b $(FQBN) -P usbasp -v $(CURDIR)
+	$(ARDUINO_CLI) burn-bootloader -P usbasp --fqbn $(FQBN) -v
 
 # Clean the build directory
 clean:
-	rm -rf $(CURDIR)/build
+	rm -rf $(BUILD_DIR)
 
-# Open the serial monitor
+# Open serial monitor
 monitor:
 	screen $(MONITOR_PORT) 115200
+
+# Check if the USB device is properly mounted
+check_device:
+	ls /dev/ttyUSB* /dev/ttyACM* || echo "Device not found. Please check the USB connection."
